--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <body>
     <form
       action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      method="post"
     >
       <fieldset class="fieldset">
         <legend>Personal information</legend>
