fixed radiobtn and text area one more time

--- a/src/index.html
+++ b/src/index.html
@@ -148,12 +148,7 @@
         <legend>Additional info:</legend>
         <div class="form-field">
           <label for="comments">Comments:
-            <textarea
-              name="comments"
-              id="comments"
-              cols="20"
-              rows="2"
-            ></textarea>
+            <textarea name="comments" maxlength="500"></textarea>
           </label>
         </div>
         <div class="form-field">
