--- a/src/index.html
+++ b/src/index.html
@@ -18,26 +18,26 @@
     >
       <fieldset class="fieldset">
         <legend>Personal information</legend>
-        <div class="form-field">
-          <label for="surname">Surname:</label>
+        <label class="form-field">
+          Surname:
           <input
             type="text"
             name="surname"
             autocomplete="off"
             required
           >
-        </div>
-        <div class="form-field">
-          <label for="name">Name:</label>
+        </label>
+        <label class="form-field">
+          Name:
           <input
             type="text"
             name="name"
             autocomplete="off"
             required
           >
-        </div>
-        <div class="form-field">
-          <label for="age">How old are You?</label>
+        </label>
+        <label class="form-field">
+          How old are You?
           <input
             type="number"
             name="age"
@@ -45,9 +45,9 @@
             max="100"
             value="12"
           >
-        </div>
-        <div class="form-field">
-          <label for="date_of_birth">Full date of birth:</label>
+        </label>
+        <label class="form-field">
+          Full date of birth:
           <input
             type="date"
             name="birth_date"
@@ -55,29 +55,29 @@
             min="1920-01-01"
             max="2022-12-31"
           >
-        </div>
-        <div class="form-field">
-          <label for="agreement">I accept the term of the agreement</label>
+        </label>
+        <label class="form-field">
+          I accept the term of the agreement
           <input
             type="checkbox"
             name="agreement"
             required
           >
-        </div>
+        </label>
       </fieldset>
       <fieldset class="fieldset">
         <legend>Registration</legend>
-        <div class="form-field">
-          <label for="email">E-mail:</label>
+        <label class="form-field">
+          E-mail:
           <input
             type="email"
             name="email"
             placeholder="email@example.com"
             required
           >
-        </div>
-        <div class="form-field">
-          <label for="password">Password:</label>
+        </label>
+        <label class="form-field">
+          Password:
           <input
             type="password"
             name="password"
@@ -85,38 +85,34 @@
             maxlength="20"
             required
           >
-        </div>
+        </label>
       </fieldset>
       <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
-        <div class="form-field">
+        <label class="form-field">
           Do you love cats?
-          <label>
-            <input
-              type="radio"
-              name="love_cats"
-              value="y"
-            >
-            Yes
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="love_cats"
-              value="y"
-            >
-            No
-          </label>
-        </div>
-        <div class="form-field">
-          <label for="color">What is your favorite color?</label>
+          <input
+            type="radio"
+            name="love_cats"
+            value="y"
+          >
+          Yes
+          <input
+            type="radio"
+            name="love_cats"
+            value="y"
+          >
+          No
+        </label>
+        <label class="form-field">
+          What is your favorite color?
           <input
             type="color"
             name="color"
           >
-        </div>
-        <div class="form-field">
-          <label for="go_to_bed">What time do you go to bed?</label>
+        </label>
+        <label class="form-field">
+          What time do you go to bed?
           <input
             type="time"
             name="time_go_to_bed"
@@ -124,17 +120,17 @@
             max="23:59:59"
             step="2"
           >
-        </div>
-        <div class="form-field">
-          <label for="brand_of_car">What are your favorite brand of cars?</label>
+        </label>
+        <label class="form-field">
+          What are your favorite brand of cars?
           <select multiple name="brand_of_car">
             <option value="BMW">BMW</option>
             <option value="Audi">Audi</option>
             <option value="Lada">Lada</option>
           </select>
-        </div>
-        <div class="form-field">
-          <label for="go_to_bed">How do you rate our work?</label>
+        </label>
+        <label class="form-field">
+          How do you rate our work?
           <input
             type="range"
             min="0"
@@ -142,22 +138,21 @@
             name="rate_work"
             value="0"
           >
-        </div>
+        </label>
       </fieldset>
       <fieldset class="fieldset">
         <legend>Additional info:</legend>
-        <div class="form-field">
-          <label for="comments">Comments:
-            <textarea name="comments" maxlength="500"></textarea>
-          </label>
-        </div>
-        <div class="form-field">
-          <label for="comments">Would you recommend us?</label>
+        <label class="form-field">
+          Comments:
+          <textarea name="comments" maxlength="500"></textarea>
+        </label>
+        <label class="form-field">
+          Would you recommend us?
           <select name="recommendations" id="recommendations">
             <option value="yes">Yes</option>
             <option value="no">No</option>
           </select>
-        </div>
+        </label>
       </fieldset>
       <button type="submit" class="btn btn_submit">Submit</button>
     </form>
